--- a/IT/Datenbanken/2020-09-21_Uebungen_1.md
+++ b/IT/Datenbanken/2020-09-21_Uebungen_1.md
@@ -2,7 +2,9 @@
 title: Übungen zur IT Datenbank
 ---
 
-Aufbau Datenbank `Artikel`
+## Datenbanken
+
+### Artikel
 
 - **ArtikelNr: number**
 - ArtikelName: string
@@ -11,104 +13,268 @@ Aufbau Datenbank `Artikel`
 - Lagerbestand: number
 - Mindestbestand: number
 
-Aufbau Datenbank `Auftrag`
+### Auftrag
 
 - **AuftragsNr: number**
 - Auftragsdatum: date
-- *Kundennummer: number*
+- *KundenNr: number*
 
-Aufbau Datenbank `Kunde`
+### Kunde
 
 - **KundenNr: number**
 - Name: string
 - PLZ: number
 - Straße: string
+- Telefon: string
+
+### Auftragsposition
+
+- **AuftragsPosition: number**
+- AuftragsNr: string
+- *ArtikelNr*: number
+- AuftragsMenge: number
+- AuftragsPreis: number
+
+### Mitarbeiter
+
+- **MitarbeiterNr: string**
+- Name: string
+- Vorname: string
+- Geschlecht: string
+- SteuerKlasse: string
+- Plz: string
+- Straße: string
+- Geboren: date
+- Eintritt: date
+- Abteilung: string
+- Provisionssatz: number
+- Umsatz: number
+- Gehalt: number
+- Kostenstelle: string
 
 ## Aufgaben
 
 (@) Alle Peripheriegeräte aus der Artikeltabelle mit den Attributen
-Artikelnummer, Artikelname und Einstandspreis
+ArtikelNr, Artikelname und Einstandspreis
 
 ```sql
 SELECT a.ArtikelNr, a.ArtikelName, a.Einstandspreis, a.ArtikelGruppe
 FROM Artikel AS a
-WHERE a.ArtikelGruppe = "PE";
+WHERE a.ArtikelGruppe = "PE"
+;
 ```
 
-(@) Alle Artikel aus der Artikeltabelle (Artikelnummer, Artikelname und
+(@) Alle Artikel aus der Artikeltabelle (ArtikelNr, Artikelname und
 Einstandspreis), deren Einstandspreis über 1500 Euro beträgt
 
 ```sql
 SELECT a.ArtikelNr, a.ArtikelName, a.Einstandspreis
 FROM Artikel AS a
-WHERE a.Einstandspreis = 1500;
+WHERE a.Einstandspreis > 1500
+;
 ```
 
-(@) Alle Artikel aus der Artikeltabelle (Artikelnummer, Artikelname und
+(@) Alle Artikel aus der Artikeltabelle (ArtikelNr, Artikelname und
 Einstandspreis), bei denen der Bestand unter dem Mindestbestand liegt.
 
 ```sql
-SELECT a.ArtikelNr, a.ArtikelName, a.Einstandspreis, a.Lagerbestand, a.Mindestbestand
+SELECT
+    a.ArtikelNr,
+    a.ArtikelName,
+    a.Einstandspreis,
+    a.Lagerbestand,
+    a.Mindestbestand
 FROM Artikel AS a
-WHERE a.Lagerbestand < a.Mindestbestand;
+WHERE a.Lagerbestand < a.Mindestbestand
+;
 ```
 
-(@) Alle Aufträge vom 14.06.00 (AuftragsNr, Auftragsdatum, Kundennummer)
+(@) Alle Aufträge vom 14.06.00 (AuftragsNr, Auftragsdatum, KundenNr)
 
 ```sql
-SELECT a.AuftragsNr, a.Auftragsdatum, a.Kundennummer
+SELECT a.AuftragsNr, a.Auftragsdatum, a.KundenNr
 FROM AUFTRAG AS a
-WHERE a.Auftragsdatum = #2000-06-14#;
+WHERE a.Auftragsdatum = #2000-06-14#
+;
 ```
 
 (@) Alle Kunden aus einem PLZ Bereich, dessen PLZ eingegeben wird.
-(Kundennummer, Name, PLZ)
+(KundenNr, Name, PLZ)
 
 ```sql
 -- Bei unbekannten Feldern wird MS Access ein Eingabefeld aufrufen
-SELECT k.Kundennummer, k.NAme, k.plz
+SELECT k.KundenNr, k.Name, k.Plz
 FROM Kunde AS k
-WHERE k.Plz = plzInput;
+WHERE k.Plz = PlzInput
+;
 ```
 
 (@) Lagerwert aller Zubehörteile ermitteln und nach Lagerwert aufsteigend
-auflisten (Artikelnummer, ArtikelName, ArtikelGruppe, Lagerbestand, Lagerwert).
+auflisten (ArtikelNr, ArtikelName, ArtikelGruppe, Lagerbestand, Lagerwert).
 
 ```sql
-SELECT a.ArtikelNr, a.ArtikelName, a.ArtikelGruppe, a.Lagerbestand, a.Einstandspreis * a.Lagerbestand AS Lagerwert
+SELECT
+    a.ArtikelNr,
+    a.ArtikelName,
+    a.ArtikelGruppe,
+    a.Lagerbestand,
+    a.Einstandspreis * a.Lagerbestand AS Lagerwert
 FROM Artikel AS a
-ORDER BY a.Einstandspreis * a.Lagerbestand ASC;
+ORDER BY a.Einstandspreis * a.Lagerbestand ASC
+;
 ```
 
 (@) PCs mit einem Einstandspreis über 2000 und nach Einstandspreis aufsteigend
-sortiert (Artikelnummer, ArtikelName, ArtikelGruppe).
+sortiert (ArtikelNr, ArtikelName, ArtikelGruppe).
 
 ```sql
 SELECT a.ArtikelNr, a.ArtikelName, a.ArtikelGruppe, a.Einstandspreis
 FROM Artikel AS a
 WHERE a.Einstandspreis = 2000 AND a.ArtikelGruppe = "PC"
-ORDER BY a.Einstandspreis ASC;
+ORDER BY a.Einstandspreis ASC
+;
 ```
 
 (@) Alle Artikel deren Einstandspreis zwischen 500 und 1000 und nach
-Einstandspreis aufsteigend sortiert (Artikelnummer, ArtikelName, ArtikelGruppe,
+Einstandspreis aufsteigend sortiert (ArtikelNr, ArtikelName, ArtikelGruppe,
 Einstandspreis).
 
 ```sql
 SELECT a.ArtikelNr, a.ArtikelName, a.ArtikelGruppe, a.Einstandspreis
 FROM Artikel AS a
 WHERE a.Einstandspreis < 500 AND a.Einstandspreis < 1000
-ORDER BY a.Einstandspreis ASC;
+ORDER BY a.Einstandspreis ASC
+;
 ```
 
 (@) Eine Adressenliste soll selektiert und angezeigt werden, die alle Kunden aus
-Blaubeuren und Laichingen (PLZ = 89143 oder 89150) zeigt (Kundennummer, Name,
+Blaubeuren und Laichingen (PLZ = 89143 oder 89150) zeigt (KundenNr, Name,
 Plz, Straße, Wohnort).
 
 ```sql
-SELECT k.Kundennummer, k.Name, k.PLZ, k.Straße, e.Ort
+SELECT k.KundenNr, k.Name, k.PLZ, k.Straße, e.Ort
 FROM KUNDE AS k, EINDEUT.PLZ AS e
 WHERE k.PLZ = e.PLZ AND (k.PLZ = "89143" OR k.PLZ = "89150")
 -- Klammern notwendig, da AND eine höhere Priorität als OR hat und der
 -- Join zuerst erfolgen muss
+;
+```
+
+(@) Eine Liste aller im Juni 2000 verkauften Artikel soll am Bildschirm
+angezeigt werden. Die Liste soll die Attribute Auftragsdatum, Artikelname,
+Auftragsmenge, Auftragspreis und den Wert [Auftragsmenge]*[Auftragspreis]
+enthalten und nach dem Auftragsdatum aufsteigend sortiert sein.
+
+```sql
+SELECT
+    au.AuftragsDatum,
+    a.ArtikelName,
+    ap.AuftragsMenge,
+    ap.AuftragsPreis,
+    ap.AuftragsMenge * ap.AuftragsPreis as Wert
+FROM
+    Auftrag au,
+    Auftragsposition ap,
+    Artikel a
+WHERE
+    a.ArtikelNr = ap.ArtikelNr AND
+    au.AuftragsNr = ap.AuftragsNr AND
+    -- Alternativ `au.AuftragsDatum BETWEEN #2000-06-01# AND #2000-06-30#`
+    au.AuftragsDatum >= #2000-06-01# AND
+    au.AuftragsDatum <= #2000-06-30#
+ORDER BY
+    au.AuftragsDatum
+;
+```
+
+(@) Eine Liste aller im Juni 2000 verkauften Artikel außer den Personalcomputern
+soll am Bildschirm angezeigt werden. Die Liste soll die Attribute AuftragsDatum,
+Artikelname, Auftragsmenge, Auftragspreis und den Wert
+[Auftragsmenge]*[Auftragspreis] enthalten.
+
+```sql
+-- von oben, aber folgendes dazu im WHERE
+WHERE
+    a.ArtikelGruppe != "PC"
+```
+
+(@) Alle Kunden (Adressdaten), bei deren Adresse die PLZ mit 7 beginnt.
+
+```sql
+SELECT k.Vorname, k.Name, k.Straße
+FROM Kunde k
+WHERE k.Plz LIKE "7*";
+```
+
+(@) Alle Kunden (KundenNr, Name, Plz und Ort), deren Namen als 3. Zeichen
+ein 'i' haben. Die weiteren Zeichen sind beliebig.
+
+```sql
+SELECT k.KundenNr, k.Name, k.Plz, e.Ort
+FROM Kunde k, EindeutPlz e
+WHERE
+    k.Plz = e.Plz AND
+    k.Name LIKE "??i*" -- ? ist ein unbekannter Charakter
+;
+```
+
+(@) Alle Kunden (KundenNr, Name, Plz und Ort), deren Namen mit den
+Anfangsbuchstaben A-M beginnen.
+
+```sql
+SELECT k.KundenNr, k.Name, k.Plz, e.Ort
+FROM Kunde k, EindeutPlz e
+WHERE
+    k.Plz = e.Plz AND
+    k.Name LIKE "[A-M]*" -- Regex-ähnlicher Character Range Syntax
+;
+```
+
+(@) Alle Kunden auflisten, die innerhalb der letzten 30 Tage einen Auftrag
+erteilt haben. (Attribute Auftragsnummer, Auftragsdatum, Name)
+
+```sql
+SELECT a.AuftragsNummer, a.AuftragsDatum, k.Name,
+FROM Auftrag a, Kunde k
+WHERE
+    a.KundenNr = k.KundenNr AND
+    a.AuftragsNr >= (NOW() - 30)
+;
+```
+
+(@) Alle Mitarbeiter, die vor 1970 geboren sind nach dem Geburtsjahr aufsteigend
+sortieren
+
+```sql
+SELECT m.Vorname, m.Name
+FROM Mitarbeiter m
+WHERE m.Geboren < #1970-01-01#
+ORDER BY m.Geboren ASC
+;
+```
+
+(@) Alle Kunden anzeigen, von denen keine Telefonnummer gespeichert ist.
+(Attribute Kundennummer, Name, Plz, Ort und Telefonnummer)
+
+```sql
+SELECT k.KundenNr, k.Name, k.Plz, k.Ort, k.Telefon
+WHERE k.Telefon != ""
+;
+```
+
+(@) Die Verkaufsleitung wünscht eine Aufstellung, aus der die Auftragssumme
+eines jeden Kunden im Monat Januar 1999 ersichtlich sein soll. Die Aufstellung
+soll die Attribute Kundennummer, Name und Auftragssumme
+[Auftragsmenge]*[Auftragswert] enthalten.
+
+```sql
+
+```
+
+(@) Die Verkaufsleitung wünscht eine Aufstellung, in der für alle gespeicherten
+Aufträge des Jahres 1999 die Auftragsnummer sowie die durchschnittliche
+Auftragshöhe abgelesen werden können.
+
+```sql
+
 ```
