--- a/Deutsch/Steppenwolf/2020-09-24_Haller.md
+++ b/Deutsch/Steppenwolf/2020-09-24_Haller.md
@@ -31,10 +31,12 @@ Folgende Textstellen lesen (Seite|Zeile)
 > Erkläre, wie man auf Grundlage dieser Erkenntnisse den Begriff des
 > "Steppenwolfs" verstehen kann.
 
-Einsam herumirrend
+Einsam herumirrend?
 
 ## Aufgabe 3
 
 > Zeige, wie sich Harry Hallers persönliche Situation darstellt und wie er zur
 > bürgerlichen Gesellschaft steht. Was kann man über seine Position zu Kultur
 > seiner Zeit sagen?
+
+missing
